# omero-ark-server

./: CHANGELOG.md  CONFIG.md  Dockerfile  README.md  config.yaml  docker-compose.yaml  manage.py  pyproject.toml  pyproject_Backup.toml  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yaml  release.yaml  tests.yaml
bridge/: admin.py  channel.py  conn.py  filters.py  inputs.py  models.py  types.py  urls.py  views.py
bridge/management/commands/: validate_settings.py
bridge/migrations/: 0001_initial.py  0002_omerouser_omero_password_omerouser_omero_username.py  0003_omerouser_omero_host_omerouser_omero_port_and_more.py
bridge/mutations/: __init__.py  dataset.py  image.py  omero_user.py  project.py
bridge/queries/: __init__.py  dataset.py  image.py  me.py  projects.py
omero_ark/: asgi.py  configuration.py  schema.py  settings.py  settings_test.py  urls.py  wsgi.py
tests/: conftest.py  test_config.py  test_inputs.py  test_is_open.py  test_print_schema.py  test_resolvers_unit.py  test_validate_settings.py
tests/integration/: docker-compose.yaml  test_omero_crud.py
