[project]
name = "omero-ark-server"
version = "1.0.0-rc.1"
description = ""
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "django>=5.2",
    "pydantic-settings[yaml]>=2.2",
    "psycopg[binary]>=3",
    "daphne>=4.0.0,<5",
    "channels-redis>=4.1.0,<5",
    "django-choices-field>=2.2.2,<3",
    "authentikate>=0.30",
    "ujson>=5.8.0,<6",
    "aioredis>=2.0.1,<3",
    "jsonpatch~=1.33",
    "django-probes>=1.7.0,<2",
    "rich>=14.0.0",
    "koherent>=0.2.0",
    "django-redis>=5.4.0",
    "boto3>=1.38.9",
    "aiohttp>=3.11.18",
    "semver>=3.0.4",
    "duckdb>=1.2.2",
    "django-taggit>=6.1.0",
    "litellm>=1.68.0",
    "django-health-check>=3.20.0",
    "zeroc-ice",
    "omero-py>=5.21.0",
    "ezomero>=3.2.1",
    "whitenoise>=6.6",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.11.1",
    "pytest-asyncio>=1.1.0",
    "dokker>=2.5",
    "python-semantic-release>=9.21.0",
    "django-stubs>=5.2.0",
    "mypy>=1.15.0",
]

[tool.django-stubs]
django_settings_module = "omero_ark.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "omero_ark.settings_test"
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that boot the docker-compose stack (opt-in; pass -m integration or --integration)",
    "omero: tests that require a live OMERO server",
]


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
extend-select = ["ANN", "D1"]
extend-ignore = [ "ANN002", "ANN003", "D100", "ANN401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
    "examples",
    "**/migrations",
]

# Same as Black.
line-length = 300


# Assume Python 3.12.
target-version = "py312"


[tool.semantic_release]
# This server is deployed as Docker images, not a PyPI package — so a release
# just bumps the version, writes the changelog, tags, and cuts a GitHub Release.
# No wheel is built and nothing is uploaded to PyPI.
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
build_command = ""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z releases. next -> prereleases X.Y.Z-rc.N.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main — e.g. 1.5.3 off `1.x`
# while main is on 2.x. The regex is reused for every future major's line.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false

# Keep the changelog / release notes focused on user-facing changes. These
# patterns only filter what's rendered — they do not affect version bumps.
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '^chore(?:\([^)]*\))?: ', # includes the chore(release): … bump commit
    '^ci(?:\([^)]*\))?: ',
    '^build(?:\([^)]*\))?: ',
    '^style(?:\([^)]*\))?: ',
    '^test(?:\([^)]*\))?: ',
    '^Merge ',
]



[tool.mypy]
exclude = ["venv/", "tests/", "examples/"]
plugins = ["mypy_django_plugin.main","pydantic.mypy"]
ignore_missing_imports = true
strict = true

[tool.uv.sources]
zeroc-ice = { url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl" }
